Added grid flow block to case studies page.

--- a/templates/case_studies.html
+++ b/templates/case_studies.html
@@ -2,8 +2,8 @@
 
 {% block body %}
 
-    {% for infographic in this.infographic.blocks %}
-        {{ infographic }}
+    {% for section in this.sections.blocks %}
+        {{ section }}
     {% endfor %}
 
 {% endblock %}
