Clients server macro, Flexslider, tailored, and testimonial flow blocks.

--- a/templates/case_studies.html
+++ b/templates/case_studies.html
@@ -6,5 +6,8 @@
         {{ section }}
     {% endfor %}
 
+    {% from "macros/clients_served.html" import render_clients_served %}
+    {{ render_clients_served() }}
+
 {% endblock %}
 
