--- a/templates/layout.html
+++ b/templates/layout.html
@@ -81,139 +81,8 @@
         </div><!-- /.container -->
       </div><!-- /.section-banner -->
 
+      <!-- Body -->
       {% block body %}{% endblock %}
-
-{#      <!-- Testimonials -->#}
-{#      <div class="section-testimonials section">#}
-{#        <div class="container-wrapper">#}
-{#          <div class="container">#}
-{#            <div class="inner-container">#}
-{#              <div id="testimonials" class="clearfix">#}
-{#                <h3>what our clients say</h3>#}
-{#                <!-- flexslider -->#}
-{#                <div class="flexslider">#}
-{#                  <ul class="slides">#}
-{#                    <li>#}
-{#                      <span>&ldquo;</span> The GO Clinical Workbench has helped us reduce the time to develop a clinically actionable report from half a day to less than an hour. <span> &rdquo;</span>#}
-{#                    </li>#}
-{#                    <li>#}
-{#                      <span>&ldquo;</span> The GO Clinical Workbench has helped us reduce the time to develop a clinically actionable report from half a day to less than an hour. <span> &rdquo;</span>#}
-{#                    </li>#}
-{#                    <li>#}
-{#                      <span>&ldquo;</span> The GO Clinical Workbench has helped us reduce the time to develop a clinically actionable report from half a day to less than an hour. <span> &rdquo;</span>#}
-{#                    </li>#}
-{#                  </ul>#}
-{#                </div><!-- /.flexslider -->#}
-{#              </div><!-- /#testimonials -->#}
-{#              <div class="ohio-state-university clearfix">#}
-{#                <img src="{{ '/img/ohio_state_university.png'|url }}" alt="">#}
-{#                <p>Pamela Groen, Laboratory Manager the Ohio State University, College of Medicine, Dept Of Pathology</p>#}
-{#              </div><!-- /.ohio-state-university -->#}
-{#            </div><!-- /.inner-container -->#}
-{#          </div><!-- /.container -->#}
-{#        </div><!-- /.container-wrapper -->#}
-{#      </div><!-- /.secion-testimonials -->#}
-{##}
-{##}
-{##}
-{##}
-{#      <!-- Press Releases  -->#}
-{#      <div class="section-press-releases background-dark">#}
-{#        <div class="container">#}
-{#          <div class="section-header text-center">#}
-{#            <div class="green-text">lorem ipsum</div>#}
-{#            <h2>Press releases</h2>#}
-{#          </div><!-- /.section-header -->#}
-{#          <div class="row boxes">#}
-{#            <div class="col-md-4">#}
-{#              <div class="box">#}
-{#                <a href="#"><img src="{{ '/img/thumb1.png'|url }}" alt="" class="img-fluid"></a>#}
-{#                <h3><a href="#">LOREM IPSUM</a></h3>#}
-{#                <p>Lorem Ipsum Dolor SitTuer Adipiscing. Lorem Ipsum Dolor SitTuer Adipiscing.Lorem Ipsum Dolor SitTuer Adipiscing...  <br class="br-more"> <a class="more" href="#">MORE <i class="fas fa-angle-right"></i></a></p>#}
-{#              </div><!-- /.box -->#}
-{#            </div><!-- /.col-md-4 -->#}
-{#            <div class="col-md-4">#}
-{#              <div class="box">#}
-{#                <a href="#"><img src="{{ '/img/thumb2.png'|url }}" alt="" class="img-fluid"></a>#}
-{#                <h3><a href="#">LOREM IPSUM</a></h3>#}
-{#                <p>Lorem Ipsum Dolor SitTuer Adipiscing. Lorem Ipsum Dolor SitTuer Adipiscing.Lorem Ipsum Dolor SitTuer Adipiscing...  <br class="br-more"> <a class="more" href="#">MORE <i class="fas fa-angle-right"></i></a></p>#}
-{#              </div><!-- /.box -->#}
-{#            </div><!-- /.col-md-4 -->#}
-{#            <div class="col-md-4">#}
-{#              <div class="box">#}
-{#                <a href="#"><img src="{{ '/img/thumb3.png'|url }}" alt="" class="img-fluid"></a>#}
-{#                <h3><a href="#">LOREM IPSUM</a></h3>#}
-{#                <p>Lorem Ipsum Dolor SitTuer Adipiscing. Lorem Ipsum Dolor SitTuer Adipiscing.Lorem Ipsum Dolor SitTuer Adipiscing... <br class="br-more"> <a class="more" href="#">MORE <i class="fas fa-angle-right"></i></a></p>#}
-{#              </div><!-- /.box -->#}
-{#            </div><!-- /.col-md-4 -->#}
-{#          </div><!-- /.row -->#}
-{#        </div><!-- /.container -->#}
-{#      </div><!-- /.section-press-releases -->#}
-{##}
-{##}
-{#      <!-- Tailored Solutions -->#}
-{#      <div class="section-tailored-solutions section">#}
-{#        <div class="container">#}
-{#          <div class="tailored-solutions text-center">#}
-{#            <h2>tailored solutions</h2>#}
-{#            <h3>Hawai’i Pathologists’ Laboratory</h3>#}
-{#            <p class="quote">#}
-{#              Combining local expertise with the well curated data already built into GenomOncology’s systems, our lab can continuously learn about these populations, and ultimately, offer better care.#}
-{#            </p>#}
-{#            <a class="btn btn-success" href="#">READ MORE <i class="fas fa-angle-right"></i></a>#}
-{#          </div>#}
-{#        </div><!-- /.container -->#}
-{#      </div><!-- /.section-tailored-solutions -->#}
-{##}
-{##}
-{#      <!-- Clients -->#}
-{#      <div class="section-clients bg-blue text-center">#}
-{#        <div class="container">#}
-{#          <div class="section-header">#}
-{#            <div class="green-text">lorem ipsum</div>#}
-{#            <h2>clients served</h2>#}
-{#          </div><!-- /.section-header -->#}
-{#          <div class="row clients">#}
-{#            <div class="col-sm-3">#}
-{#              <img src="{{ '/img/logo1.png'|url }}" alt="" class="img-fluid">#}
-{#            </div>#}
-{#            <div class="col-sm-3">#}
-{#              <img src="{{ '/img/logo2.png'|url }}" alt="" class="img-fluid">#}
-{#            </div>#}
-{#            <div class="col-sm-3">#}
-{#              <img src="{{ '/img/logo3.png'|url }}" alt="" class="img-fluid">#}
-{#            </div>#}
-{#            <div class="col-sm-3">#}
-{#              <img src="{{ '/img/logo4.png'|url }}" alt="" class="img-fluid">#}
-{#            </div>#}
-{#            <div class="col-sm-3">#}
-{#              <img src="{{ '/img/logo5.png'|url }}" alt="" class="img-fluid">#}
-{#            </div>#}
-{#            <div class="col-sm-3">#}
-{#              <img src="{{ '/img/logo6.png'|url }}" alt="" class="img-fluid">#}
-{#            </div>#}
-{#            <div class="col-sm-3">#}
-{#              <img src="{{ '/img/logo7.png'|url }}" alt="" class="img-fluid">#}
-{#            </div>#}
-{#            <div class="col-sm-3">#}
-{#              <img src="{{ '/img/logo8.png'|url }}" alt="" class="img-fluid">#}
-{#            </div>#}
-{#            <div class="col-sm-3">#}
-{#              <img src="{{ '/img/logo9.png'|url }}" alt="" class="img-fluid">#}
-{#            </div>#}
-{#            <div class="col-sm-3">#}
-{#              <img src="{{ '/img/logo10.png'|url }}" alt="" class="img-fluid">#}
-{#            </div>#}
-{#            <div class="col-sm-3">#}
-{#              <img src="{{ '/img/logo11.png'|url }}" alt="" class="img-fluid">#}
-{#            </div>#}
-{#            <div class="col-sm-3">#}
-{#              <img src="{{ '/img/logo12.png'|url }}" alt="" class="img-fluid">#}
-{#            </div>#}
-{#          </div><!-- /.row -->#}
-{#        </div><!-- /.container -->#}
-{#      </div><!-- /.section-clients -->#}
-
 
       <!-- Contact -->
       <div class="section-contact bg-blue">
@@ -316,7 +185,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <script src="{{ 'js/jquery.flexslider-min.js'|url }}"></script>
-    <script src="{{ 'js/custom.js'|url }}"></script>
+    <script src="{{ '/js/jquery.flexslider-min.js'|url }}"></script>
+    <script src="{{ '/js/custom.js'|url }}"></script>
   </body>
 </html>
